Empezamos a poner todas las provincias de Argentina

--- a/index.html
+++ b/index.html
@@ -15,17 +15,46 @@
       <section>
         <form id="formPersona">
           <label> Nombre:
-            <input type="text" id="nombre">
+            <input type="text" name="nombre" id="nombre">
           </label>
-          <label>Apellido:
-            <input type="text" id="apellido">
+          <label> Apellido:
+            <input type="text" name="apellido" id="apellido">
           </label>
-          <label>
-            <input type="number" id="edad">
+          <label> Edad:
+            <input type="number" name="edad" id="edad">
           </label>
-          <label>
-            <input type="date" id="fechaNacimiento">
+          <label> Correo Electronico:
+            <input type="email" name="correo" id="correo">
           </label>
+          <label> Calle:
+            <input type="text" name="calle" id="calle">
+          </label>
+          <select name="provincia" id="provincia">
+            <option selected>Elija la provincia donde vive</option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+          </select>
           <input type="submit" id="submit">
         </form>
       </section>
