--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <body>
   <header>
-    <section>
+    <section id="headerTitle">
       <h1>Personas</h1>
     </section>
     <section id="sectionSwitch">
-      <label class="switch">
-        <input type="checkbox" id="slider">
-        <span class="sliderClass"></span>
-      </label>
+      <button class="darkModeSwitch ms-2" id="switch">
+        <span><i class="fa-regular fa-moon"></i></span>
+        <span><i class="fa-regular fa-sun"></i></span>
+      </button>
     </section>
   </header>
   <main>
