Le hice algunos ajustes al modo oscuro para que quede mas piola

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       <h1>Personas</h1>
     </section>
     <section id="sectionSwitch">
-      <button class="darkModeSwitch ms-2" id="switch">
-        <span><i class="fa-regular fa-moon"></i></span>
-        <span><i class="fa-regular fa-sun"></i></span>
+      <button class="darkModeSwitch" id="switch">
+        
       </button>
     </section>
   </header>
