--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <h1>Personas</h1>
     </section>
     <section id="sectionSwitch">
-      <button class="darkModeSwitch" id="switch">
-        
-      </button>
+      <button class="darkModeSwitch" id="switch"></button>
     </section>
   </header>
   <main>
@@ -30,35 +28,40 @@
         <label> Edad:
           <input type="number" name="edad" id="edad">
         </label>
+        <label> Fecha De Nacimiento:
+          <input type="date" name="nacimiento" id="nacimiento">
+        </label>
         <label> Correo Electronico:
           <input type="email" name="correo" id="correo">
         </label>
-        <select name="provincia" id="provincia">
-          <option selected>Elija la provincia donde vive</option>
-          <option value="Buenos Aires">Buenos Aires</option>
-          <option value="Catamarca">Catamarca</option>
-          <option value="Chaco">Chaco</option>
-          <option value="Chubut">Chubut</option>
-          <option value="Córdoba">Córdoba</option>
-          <option value="Corrientes">Corrientes</option>
-          <option value="Entre Ríos">Entre Ríos</option>
-          <option value="Formosa">Formosa</option>
-          <option value="Jujuy">Jujuy</option>
-          <option value="La Pampa">La Pampa</option>
-          <option value="La Rioja">La Rioja</option>
-          <option value="Mendoza">Mendoza</option>
-          <option value="Misiones">Misiones</option>
-          <option value="Neuquén">Neuquén</option>
-          <option value="Río Negro">Río Negro</option>
-          <option value="Salta">Salta</option>
-          <option value="San Juan">San Juan</option>
-          <option value="San Luis">San Luis</option>
-          <option value="Santa Cruz">Santa Cruz</option>
-          <option value="Santa Fe">Santa Fe</option>
-          <option value="Santiago Del Estero">Santiago Del Estero</option>
-          <option value="Tierra Del Fuego">Tierra Del Fuego</option>
-          <option value="Tucumán">Tucumán</option>
-        </select>
+        <label> Provincia:
+          <select name="provincia" id="provincia">
+            <option selected></option>
+            <option value="Buenos Aires">Buenos Aires</option>
+            <option value="Catamarca">Catamarca</option>
+            <option value="Chaco">Chaco</option>
+            <option value="Chubut">Chubut</option>
+            <option value="Córdoba">Córdoba</option>
+            <option value="Corrientes">Corrientes</option>
+            <option value="Entre Ríos">Entre Ríos</option>
+            <option value="Formosa">Formosa</option>
+            <option value="Jujuy">Jujuy</option>
+            <option value="La Pampa">La Pampa</option>
+            <option value="La Rioja">La Rioja</option>
+            <option value="Mendoza">Mendoza</option>
+            <option value="Misiones">Misiones</option>
+            <option value="Neuquén">Neuquén</option>
+            <option value="Río Negro">Río Negro</option>
+            <option value="Salta">Salta</option>
+            <option value="San Juan">San Juan</option>
+            <option value="San Luis">San Luis</option>
+            <option value="Santa Cruz">Santa Cruz</option>
+            <option value="Santa Fe">Santa Fe</option>
+            <option value="Santiago Del Estero">Santiago Del Estero</option>
+            <option value="Tierra Del Fuego">Tierra Del Fuego</option>
+            <option value="Tucumán">Tucumán</option>
+          </select>
+        </label>
         <label> Localidad:
           <input type="text" name="localidad" id="localidad">
         </label>
@@ -75,11 +78,11 @@
   <footer>
     <section>
       <article>
-        <a id="github" href="https://github.com/fabianNav"><i class="fa-brands fa-github"></i></a>
-        <a id="linkedin" href="https://www.linkedin.com/in/luis-fabian-navarro-a9a42a217/"><i
+        <a class="links" id="github" href="https://github.com/fabianNav"><i class="fa-brands fa-github"></i></a>
+        <a class="links" id="linkedin" href="https://www.linkedin.com/in/luis-fabian-navarro-a9a42a217/"><i
             class="fa-brands fa-linkedin-in"></i></a>
-        <a id="whatsapp" href="https://wa.link/4vfimv"><i class="fa-brands fa-whatsapp"></i></a>
-        <a id="mail" href="mailto:time50851@gmail.com"><i class="fa-brands fa-google"></i></a>
+        <a class="links" id="whatsapp" href="https://wa.link/4vfimv"><i class="fa-brands fa-whatsapp"></i></a>
+        <a class="links" id="mail" href="mailto:time50851@gmail.com"><i class="fa-brands fa-google"></i></a>
       </article>
     </section>
   </footer>
