Creamos el archivo de datosFormDom.js y definimos las variables, ademas modifiqué un poco el CSS

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <label> Calle:
           <input type="text" name="calle" id="calle">
         </label>
-        <label> Direccion:
+        <label> Numero De Casa:
           <input type="number" name="direccion" id="direccion">
         </label>
         <input type="submit" id="submit">
