Punto de guardado

--- a/index.html
+++ b/index.html
@@ -74,7 +74,31 @@
         <input type="submit" id="submit">
       </form>
     </section>
+    <section>
+      <article>
+        <table>
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Apellido</th>
+              <th>Edad</th>
+              <th>Nacimiento</th>
+              <th>Correo</th>
+              <th>Provincia</th>
+              <th>Localidad</th>
+              <th>Calle</th>
+              <th>Numero De Casa</th>
+            </tr>
+          </thead>
+          <tbody id="containerDatos">
+
+          </tbody>
+        </table>
+      </article>
+    </section>
   </main>
+
+
   <footer>
     <section>
       <article>
