--- a/index.html
+++ b/index.html
@@ -76,23 +76,9 @@
     </section>
     <section>
       <article>
-        <table>
-          <thead>
-            <tr>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Edad</th>
-              <th>Nacimiento</th>
-              <th>Correo</th>
-              <th>Provincia</th>
-              <th>Localidad</th>
-              <th>Calle</th>
-              <th>Numero De Casa</th>
-            </tr>
-          </thead>
-          <tbody id="containerDatos">
-
-          </tbody>
+        <table id="containerDatos">
+          
+          
         </table>
       </article>
     </section>
