Agregué una libreria para que aparezcan popups, se llama 'sweetalert2'

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     </section>
   </footer>
   <script type="module" src="/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://kit.fontawesome.com/5095e6fda6.js" crossorigin="anonymous"></script>
 </body>
 
