Trate de hacer un metodo para borrar pero no me salío, mañana veré si lo resuelvo

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <section>
       <form id="formPersona">
         <label> Nombre:
-          <input type="text" name="nombre" id="nombre">
+          <input type="text" name="nombre" id="nombre" autocomplete="additional-name">
         </label>
         <label> Apellido:
-          <input type="text" name="apellido" id="apellido">
+          <input type="text" name="apellido" id="apellido" autocomplete="additional-name">
         </label>
         <label> Edad:
-          <input type="number" name="edad" id="edad" min="0">
+          <input type="number" name="edad" id="edad" min="0" autocomplete="cc-number">
         </label>
         <label> Fecha De Nacimiento:
           <input type="date" name="nacimiento" id="nacimiento" max="today">
